--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,7 @@
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <body ng-app="marvelComics">
 <div ng-view></div>
-
-<footer>
-	
-</footer>
-Hello workd
+<footer></footer>
   <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
